[package]
name = "zsxq_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
mongodb = "2.8.0"
percent-encoding = "2.3.1"
regex = "1.10.2"
tokio = "1.35.0"
